# django

./: pyproject.toml
basic_django/: __init__.py  settings.py  urls.py
basic_django/middleware/: auth.py  request_log.py
example/: models.py  serializers.py  urls.py  views.py
